--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </div>
 
       <div class="menu-item">
-        <img src="images/kare-yakigyouza.jpg" alt="カレーモモ肉水餃子">
+        <img src="images/kare-mizugyouza.jpg" alt="カレーモモ肉水餃子">
         <div class="info">
           <h3>カレーモモ肉水餃子/咖哩雞肉水餃</h3>
 
