--- a/index.html
+++ b/index.html
@@ -484,6 +484,32 @@
         </div>
       </div>
 
+        <div class="menu-item">
+        <img src="sannra-su-pu.jpg" alt="サンラースープ">
+        <div class="info">
+          <h3>サンラースープ/酸辣湯</h3>
+
+          <p class="price" data-price="90">金額：90</p>
+
+         <select class="qty" name="qty[]" data-item="サンラースープ/酸辣湯">
+           <option value="0">0</option>
+           <option value="1">1</option>
+           <option value="2">2</option>
+           <option value="3">3</option>
+           <option value="4">4</option>
+           <option value="5">5</option>
+           <option value="6">6</option>
+           <option value="7">7</option>
+           <option value="8">8</option>
+           <option value="9">9</option>
+           <option value="10">10</option>
+           <option value="other">その他/其他</option>
+         </select>
+          <input type="number" name="qty_input[]" class="qty-input" style="display:none;" min="0" max="99" value="0" />
+          <input type="text" name="note[]" placeholder="備考" class="note">
+        </div>
+      </div>
+
       <button type="submit">決定/確定</button>
     </form>
     <p id="response"></p>
